<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bigdata.mpandroidchartdemo.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/LineChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_LineChart" />

    <Button
        android:id="@+id/BarChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_BarChart" />

    <Button
        android:id="@+id/PieChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_PieChart" />

    <Button
        android:id="@+id/ScatterChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_ScatterChart" />

    <Button
        android:id="@+id/BubbleChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_BubbleChart" />

    <Button
        android:id="@+id/CandleStickChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_CandleStickChart" />

    <Button
        android:id="@+id/RadarChartChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_RadarChart" />

</LinearLayout>
